# ops-guardian

./: PRD.md  PRODUCT_UX_BRIEF.md  README.md  improvements.md  main.py  pyproject.toml
data/: access_control_log.json  cmms_assets.json  emergency_policy.json  eval_labels.json  mes_events.json  ops_guardian.db  scenarios.json  security_policy.json  site_map.json  wms_orders.json
data/sops/: emergency_action_plan.md  packout_sop_acme.md  security_policy.md  traffic_sop_v1.md  traffic_sop_v2_cold_chain.md
data/videos/: README.md
ops_guardian/: __init__.py  app.py  config.py  data_loader.py  model_adapters.py  models.py  perception.py  runner.py  schemas.py  scoring.py  storage.py  tools.py  video.py
ops_guardian/static/: cockpit.html  console.html
scripts/: eval.py  smoke_vlm_chat.py
tests/: test_api_scenarios.py  test_authority.py  test_eval.py  test_model_adapters.py  test_p0_gate.py  test_perception.py  test_react_loop.py  test_scoring.py  test_structured_outputs.py  test_traces.py  test_verification.py
