[project]
name = "ops-guardian"
version = "0.1.0"
description = "Backend-first Line Guardian demo for preventive industrial operations supervision"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.0",
    "httpx>=0.28.0",
    "pydantic>=2.12.0",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
video = [
    "opencv-python-headless>=4.10.0",
]
perception = [
    "ultralytics>=8.3.0",
]

[project.scripts]
ops-guardian = "ops_guardian.app:run_dev"
